compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__pattern_matching_on_literal_string.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1184
expression: "\npub record Wibble { Wibble }\npub fn main() {\n  case \"hello\" {\n    _ -> Nil\n  }\n}"
---
----- SOURCE CODE

pub record Wibble { Wibble }
pub fn main() {
  case "hello" {
    _ -> Nil
  }
}

----- WARNING
warning: Match on a literal value
  ┌─ /src/warning/wrn.rakun:4:8
  │
4 │   case "hello" {
  │        ^^^^^^^ There's no need to pattern match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
