compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__record_update_variant_inference_requires_v1_6.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 2484
expression: "\npub record Wibble {\n  Wibble(a: Int, b: Int)\n  Wobble(a: Int, c: Int)\n}\n\npub fn main(wibble) {\n  case wibble {\n    Wibble(..) -> Wibble(..wibble, b: 10)\n    Wobble(..) -> panic\n  }\n}\n"
---
----- SOURCE CODE

pub record Wibble {
  Wibble(a: Int, b: Int)
  Wobble(a: Int, c: Int)
}

pub fn main(wibble) {
  case wibble {
    Wibble(..) -> Wibble(..wibble, b: 10)
    Wobble(..) -> panic
  }
}


----- WARNING
warning: Incompatible rakun version range
  ┌─ /src/warning/wrn.rakun:9:19
  │
9 │     Wibble(..) -> Wibble(..wibble, b: 10)
  │                   ^^^^^^^^^^^^^^^^^^^^^^^ This requires a Rakun version >= 1.6.0

Record updates for custom types when the variant is known was introduced in
version v1.6.0. But the Rakun version range specified in your `rakun.toml`
would allow this code to run on an earlier version like v1.0.0, resulting
in compilation errors!
Hint: Remove the version constraint from your `rakun.toml` or update it to be:

    rakun = ">= 1.6.0"
