compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__record_update_warnings_test3.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub record Person {\n            Person(name: String, age: Int)\n        }\n        pub fn update_person() {\n            let past = Person(\"Quinn\", 27)\n            let present = Person(..past, name: \"Quinn\", age: 28)\n            present\n        }"
---
warning: Redundant record update
  ┌─ /src/warning/wrn.rakun:7:27
  │
7 │             let present = Person(..past, name: "Quinn", age: 28)
  │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This record update specifies all fields

Hint: It is better style to use the record creation syntax.
