compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__redundant_function_capture_in_pipe_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1990
expression: "\n  pub fn wobble(_) { 1 }\n\n  pub fn main() {\n    1 |> wobble(_) |> wobble\n  }\n"
---
----- SOURCE CODE

  pub fn wobble(_) { 1 }

  pub fn main() {
    1 |> wobble(_) |> wobble
  }


----- WARNING
warning: Redundant function capture
  ┌─ /src/warning/wrn.rakun:5:17
  │
5 │     1 |> wobble(_) |> wobble
  │                 ^ You can safely remove this

This function capture is redundant since the value is already piped as the
first argument of this call.

See: https://tour.rakun.run/functions/pipelines/
